# live-services-engine

./: .gitignore  Makefile  README.md  generate_docs.sh  main.py  pyproject.toml  tasks.py
app/: __init__.py  dres.py  exq.py  hello.py  schemas.py  search_utils.py  shared_resources.py  utils.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  admin.py  items.py  search.py
app/core/: __init__.py  config.py  exceptions.py  indexes.py  models.py
app/repositories/: __init__.py  database_repository.py  db_helper.py  index_repository.py  metadata_repository.py
app/schemas/: __init__.py  filters.py  items.py  logging.py  search.py  session.py
app/services/: __init__.py  item_service.py  logging_service.py  search_service.py
app/strategies/: __init__.py  aggregate_search.py  base.py  caption_search.py  clip_search.py  faceted_search.py  rf_search.py
data/: config.ini.template
docs/source/: api.rst  app.api.routes.rst  app.core.rst  app.repositories.rst  app.rst  app.services.rst  app.strategies.rst  conf.py  development.rst  index.rst  installation.rst  modules.rst
extra/: benchmark.py  benchmark2.py  logging_protocol.md  read_logs.py  test.py  test3.py  testnew.py
